# fofa_rust

./: Cargo.toml  README.MD
docs/: README_CN.md  README_EN.md
examples/get_other_responses/: Cargo.toml
examples/get_other_responses/src/: main.rs
examples/get_result_by_fileds_in_range/: Cargo.toml
examples/get_result_by_fileds_in_range/src/: main.rs
examples/get_result_by_lines/: Cargo.toml
examples/get_result_by_lines/src/: main.rs
examples/get_result_by_multi_pages/: Cargo.toml
examples/get_result_by_multi_pages/src/: main.rs
examples/get_result_by_page/: Cargo.toml
examples/get_result_by_page/src/: main.rs
examples/write_result_to_json/: Cargo.toml  fofa导出_fields=host,ip,port,domain,server,os_1714207473.json
examples/write_result_to_json/src/: main.rs
examples/write_result_to_xlsx/: Cargo.toml  fofa导出_fields=host,ip,port,domain,server,os_1714206781.xlsx
examples/write_result_to_xlsx/src/: main.rs
src/: fofa.rs  main.rs
