[package]
name = "fofa"
version = "0.1.3"
edition = "2021"
authors = ["algooriithm <tengxunniubi@protonmail.com>"]
description = "fofa_rust is a sdk made for FOFA (a cybersecurity map tool)"
documentation = "https://github.com/index2014/fofa_rust/blob/main/docs/README_EN.MD"
repository = "https://github.com/index2014/fofa_rust"
readme = "README.MD"
keywords = ["fofa"]
license = "MIT"
rust-version = "1.77.2"


[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = {version = "0.22.0"}
json ={ version = "0.12.4"}
serde = { version = "1.0.198", features = ["derive"] }
serde_json ={ version = "1.0.116"}
argparse ={ version = "0.2.2"}
xlsxwriter = {version = "0.6.0"}
calamine = "0.24.0"


[lib]
path = "src/fofa.rs"